--- a/gallery/index.html
+++ b/gallery/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-      <!-- ========== HEADER ========== -->
+    <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
             aria-label="Global">
@@ -959,7 +959,8 @@
                             href="../enterprise-resource-planning.html">ERP</a>
                     </p>
                     <p>
-                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="../data-services.html">Data
+                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800"
+                            href="../data-services.html">Data
                             Services</a>
                     </p>
                 </div>
