--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
               </a>
 
               <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-white hover:text-gray-300 font-medium focus:outline-none focus:text-gray-300"
-                href="./News">
+                href="./news">
                 News
               </a>
 
