product link corrected

--- a/call-center-services/Inbound-Call-Center-Services.html
+++ b/call-center-services/Inbound-Call-Center-Services.html
@@ -447,7 +447,7 @@
 
 
                     <a class="py-3 ps-px sm:px-3 md:py-4 text-gray-600 hover:text-gray-300 focus:outline-none focus:text-gray-300"
-                        href="../Products">Products
+                        href="../products">Products
                     </a>
 
                     <!-- technologies-->
