new chat integration added

--- a/about-us.html
+++ b/about-us.html
@@ -18,12 +18,12 @@
   <link href="./output.css" rel="stylesheet" />
   <script src="preline.js"></script>
 
-  
+
 
 </head>
 
 <body>
-    <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
+  <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
     <nav
       class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
       aria-label="Global">
@@ -922,6 +922,7 @@
       </ol>
     </nav>
   </section>
+
   <section>
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
       <div class="flex flex-col lg:flex-col">
@@ -1127,6 +1128,7 @@
     </div>
     <!-- End Features -->
   </section>
+
   <section>
     <!-- Features -->
     <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
@@ -1295,6 +1297,7 @@
     </div>
     <!-- End Features -->
   </section>
+
   <section class="bg-[url('./img/feh-t3-bg.webp')] bg-cover bg-right bg-gray-400">
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
       <div class="grid grid-cols-2 row-gap-8 md:grid-cols-4">
@@ -1406,8 +1409,7 @@
             <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./it-services.html">IT Services</a>
           </p>
           <p>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800"
-              href="./it-services/web-development.html">
+            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./it-services/web-development.html">
               Web development
             </a>
           </p>
@@ -1421,7 +1423,8 @@
               href="./enterprise-resource-planning.html">ERP</a>
           </p>
           <p>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./data-services.html">Data Services</a>
+            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./data-services.html">Data
+              Services</a>
           </p>
         </div>
       </div>
