--- a/terms.html
+++ b/terms.html
@@ -15,6 +15,31 @@
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link href="./output.css" rel="stylesheet" />
   <script src="preline.js"></script>
+
+  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-4753be9f-9b30-449f-a673-0305a7fb609a" data-elfsight-app-lazy></div>
+
+  <!-- 1. Configure Chatling -->
+  <script>
+    window.chtlConfig = { chatbotId: "4343423943" };
+  </script>
+
+  <!-- 2. Load Chatling Widget -->
+  <script async data-id="4343423943" id="chtl-script" type="text/javascript"
+    src="https://chatling.ai/js/embed.js"></script>
+
+  <!-- 3. Attempt to Auto-Open After  Seconds -->
+  <script>
+    setTimeout(function () {
+      if (window.Chatling && typeof window.Chatling.open === "function") {
+        window.Chatling.open();
+      } else {
+        var widgetButton = document.querySelector('[class*="chatling"] [role="button"]');
+        if (widgetButton) widgetButton.click();
+      }
+    }, 8000);
+  </script>
 </head>
 
 <body>
@@ -882,7 +907,7 @@
         </div>
       </div>
   </section>
-<!-- ========== FOOTER ========== -->
+  <!-- ========== FOOTER ========== -->
   <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
     <!-- Grid -->
     <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 mb-10 px-4 sm:px-6 lg:px-8">
@@ -928,8 +953,7 @@
             <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./it-services.html">IT Services</a>
           </p>
           <p>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800"
-              href="./it-services/web-development.html">
+            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./it-services/web-development.html">
               Web development
             </a>
           </p>
@@ -943,7 +967,8 @@
               href="./enterprise-resource-planning.html">ERP</a>
           </p>
           <p>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./data-services.html">Data Services</a>
+            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="./data-services.html">Data
+              Services</a>
           </p>
         </div>
       </div>
