casestudy index section design updated

--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -924,7 +924,7 @@
         </nav>
     </section>
 
-    <section class="relative bg-gradient-to-br from-gray-900 via-indigo-950 to-black py-20 overflow-hidden ">
+    <section class="relative bg-gradient-to-br from-gray-100 via-blue-50 to-white py-20 overflow-hidden">
         <!-- Background Wave Animation -->
         <div class="absolute inset-0 pointer-events-none">
             <div class="wave-bg"></div>
@@ -936,11 +936,11 @@
             <!-- Header -->
             <div class="text-center mb-16">
                 <h2
-                    class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-purple-500 to-indigo-600 animate-gradient">
+                    class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 via-indigo-500 to-purple-600 animate-gradient">
                     Our Success Stories
                 </h2>
                 <div
-                    class="w-32 h-1 bg-gradient-to-r from-blue-500 to-indigo-600 mx-auto mt-4 rounded-full animate-pulse">
+                    class="w-32 h-1 bg-gradient-to-r from-blue-600 to-purple-600 mx-auto mt-4 rounded-full animate-pulse">
                 </div>
             </div>
 
@@ -952,20 +952,20 @@
                     <div class="relative group">
                         <img class="w-full h-56 object-cover" src="./img/Arppan.png" alt="Arppan Temple Booking" />
                         <div
-                            class="absolute inset-0 bg-gradient-to-t from-gray-800/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                            <p class="text-white text-sm font-medium p-4">Temple Pooja Booking Service</p>
+                            class="absolute inset-0 bg-gradient-to-t from-gray-200/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
+                            <p class="text-gray-800 text-sm font-medium p-4">Temple Pooja Booking Service</p>
                         </div>
                     </div>
                     <div class="p-6">
-                        <h5 class="mb-3 text-2xl font-bold text-blue-600">
+                        <h5 class="mb-3 text-2xl font-bold text-indigo-600">
                             Arppan
                         </h5>
-                        <p class="mb-4 text-white text-[15px] leading-relaxed">
+                        <p class="mb-4 text-gray-700 text-[15px] leading-relaxed">
                             Voicene executed a comprehensive SEO strategy to enhance the organic visibility and traffic
                             for Arppan, focusing on both the website and app.
                         </p>
                         <a href="./arppan.html"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-500 to-indigo-600 rounded-lg hover:from-blue-600 hover:to-indigo-700 focus:ring-4 focus:ring-blue-300">
+                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg hover:from-blue-700 hover:to-purple-700 focus:ring-4 focus:ring-blue-200">
                             Read More
                             <svg class="rtl:rotate-180 w-4 h-4 ms-2" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -983,20 +983,20 @@
                         <img class="w-full h-56 object-cover" src="./img/wireless-img1.webp"
                             alt="Wireless Gadgetz Retail" />
                         <div
-                            class="absolute inset-0 bg-gradient-to-t from-gray-800/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                            <p class="text-white text-sm font-medium p-4">Accessible Wireless Retail</p>
+                            class="absolute inset-0 bg-gradient-to-t from-gray-200/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
+                            <p class="text-gray-800 text-sm font-medium p-4">Accessible Wireless Retail</p>
                         </div>
                     </div>
                     <div class="p-6">
-                        <h5 class="mb-3 text-2xl font-bold text-blue-600">
+                        <h5 class="mb-3 text-2xl font-bold text-indigo-600">
                             Wireless Gadgetz
                         </h5>
-                        <p class="mb-4 text-white text-[15px] leading-relaxed">
+                        <p class="mb-4 text-gray-700 text-[15px] leading-relaxed">
                             Over the past 6 months, Voicene enhanced the SEO performance for Wireless Gadgetz, a
                             Texas-based retailer providing accessible wireless gadgets with STAP vouchers.
                         </p>
                         <a href="./wireless-gadgetz.html"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-500 to-indigo-600 rounded-lg hover:from-blue-600 hover:to-indigo-700 focus:ring-4 focus:ring-blue-300">
+                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg hover:from-blue-700 hover:to-purple-700 focus:ring-4 focus:ring-blue-200">
                             Read More
                             <svg class="rtl:rotate-180 w-4 h-4 ms-2" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -1013,20 +1013,20 @@
                     <div class="relative group">
                         <img class="w-full h-56 object-cover" src="./img/technetmark.jpg" alt="Technetmark Solutions" />
                         <div
-                            class="absolute inset-0 bg-gradient-to-t from-gray-800/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                            <p class="text-white text-sm font-medium p-4">Tech Solutions Provider</p>
+                            class="absolute inset-0 bg-gradient-to-t from-gray-200/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
+                            <p class="text-gray-800 text-sm font-medium p-4">Tech Solutions Provider</p>
                         </div>
                     </div>
                     <div class="p-6">
-                        <h5 class="mb-3 text-2xl font-bold text-blue-600">
+                        <h5 class="mb-3 text-2xl font-bold text-indigo-600">
                             Technetmark
                         </h5>
-                        <p class="mb-4 text-white text-[15px] leading-relaxed">
+                        <p class="mb-4 text-gray-700 text-[15px] leading-relaxed">
                             Voicene implemented a targeted SEO campaign for Technetmark, boosting its online presence
                             and driving qualified leads for its tech solutions.
                         </p>
                         <a href="./technetmark.html"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-500 to-indigo-600 rounded-lg hover:from-blue-600 hover:to-indigo-700 focus:ring-4 focus:ring-blue-300">
+                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg hover:from-blue-700 hover:to-purple-700 focus:ring-4 focus:ring-blue-200">
                             Read More
                             <svg class="rtl:rotate-180 w-4 h-4 ms-2" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -1043,20 +1043,20 @@
                     <div class="relative group">
                         <img class="w-full h-56 object-cover" src="./img/aviratha.webp" alt="Aviratha Services" />
                         <div
-                            class="absolute inset-0 bg-gradient-to-t from-gray-800/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                            <p class="text-white text-sm font-medium p-4">Cultural Services Platform</p>
+                            class="absolute inset-0 bg-gradient-to-t from-gray-200/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
+                            <p class="text-gray-800 text-sm font-medium p-4">Cultural Services Platform</p>
                         </div>
                     </div>
                     <div class="p-6">
-                        <h5 class="mb-3 text-2xl font-bold text-blue-600">
+                        <h5 class="mb-3 text-2xl font-bold text-indigo-600">
                             Aviratha
                         </h5>
-                        <p class="mb-4 text-white text-[15px] leading-relaxed">
+                        <p class="mb-4 text-gray-700 text-[15px] leading-relaxed">
                             Voicene implemented a targeted SEO campaign for Aviratha, boosting its online presence
                             and driving qualified leads for its tech solutions.
                         </p>
                         <a href="./aviratha.html"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-500 to-indigo-600 rounded-lg hover:from-blue-600 hover:to-indigo-700 focus:ring-4 focus:ring-blue-300">
+                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg hover:from-blue-700 hover:to-purple-700 focus:ring-4 focus:ring-blue-200">
                             Read More
                             <svg class="rtl:rotate-180 w-4 h-4 ms-2" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -1091,10 +1091,10 @@
     <style>
         /* Glassmorphic Effect */
         .glassmorphic {
-            background: rgba(255, 255, 255, 0.08);
+            background: rgba(255, 255, 255, 0.6);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
         }
 
         /* Gradient Animation for Header */
@@ -1124,7 +1124,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(200,220,255,0.2)" fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L0,320Z"></path></svg>') repeat-x;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(200,220,255,0.4)" fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L0,320Z"></path></svg>') repeat-x;
             animation: wave 15s linear infinite;
         }
 
@@ -1142,7 +1142,7 @@
         .particles {
             position: absolute;
             inset: 0;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="20" cy="20" r="2" fill="rgba(200,200,200,0.3)"/><circle cx="60" cy="60" r="3" fill="rgba(200,200,200,0.4)"/><circle cx="90" cy="30" r="2" fill="rgba(200,200,200,0.3)"/><circle cx="40" cy="80" r="2" fill="rgba(200,200,200,0.2)"/></svg>') repeat;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="20" cy="20" r="2" fill="rgba(150,150,150,0.3)"/><circle cx="60" cy="60" r="3" fill="rgba(150,150,150,0.4)"/><circle cx="90" cy="30" r="2" fill="rgba(150,150,150,0.3)"/><circle cx="40" cy="80" r="2" fill="rgba(150,150,150,0.2)"/></svg>') repeat;
             animation: moveParticles 30s linear infinite;
         }
 
